2010-08-24 Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15454: Provide a reason for logDeprecatedTypoScript()

2010-08-23 Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15534: t3lib_div::view_array: Improve rendering of objects (Thanks to Stefan Galinski)

2010-08-23 Steffen Kamper  <steffen@typo3.org>

	* Added feature #15504: Description of TYPO3_CONF settings should allow HTML markup for readability (Thanks to Ernesto Baschny)
	* Fixed bug #15092: Ajax loaded items of inline records are encoded twice (Thanks to Martin Borer)
	* Fixed bug #15536: DebugConsole - Compat with ExtJS 3.2.x (broken resize event and double split bar) (Thanks to Stefan Galinski)
	* Updated sysexts version numbers and md5 values
	* Added feature #15513: Log ExtDirect Exceptions in DebugConsole (Thanks to Stefan Galinski)

2010-08-23  Xavier Perseguers  <typo3@perseguers.ch>

	* Resynchronized DBAL after fixing blocking bug #15535
	* Raised ADOdb to version 5.11.0
	* Raised DBAL to version 1.2.0alpha1
	* Fixed bug #15528: Add unit tests for t3lib_db_PreparedStatement (thanks to Helmut Hummel)
	* Fixed bug #15527: Enhance t3lib_db_PreparedStatement (thanks to Helmut Hummel)

2010-08-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15526: No recipient is logged to syslog if sending of mail failed in t3lib_utility_Mail (Thanks to Helmut Hummel)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #15102: Scheduler: BE module does not use new skin properly (TYPO3 4.5)
	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15514: Wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)
	* Fixed bug #15507: MEDIA content element ignores stdWrap configuration (Thanks to Jigal van Hemert)

2010-08-19  Ingo Renner  <ingo@typo3.org>

	* Fixed naming of class.t3lib_db_preparedstatement.php in core_autoload.php
